--- a/.prettierrc
+++ b/.prettierrc
@@ -3,5 +3,6 @@
 	"singleQuote": true,
 	"trailingComma": "none",
 	"printWidth": 100,
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+	"plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"]
 }
