--- a/package.json
+++ b/package.json
@@ -1,38 +1,41 @@
 {
-	"name": "tofu",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
-		"format": "prettier --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/kit": "^1.20.4",
-		"@tailwindcss/typography": "^0.5.10",
-		"@types/crypto-js": "^4.2.1",
-		"autoprefixer": "^10.4.16",
-		"daisyui": "^3.8.3",
-		"postcss": "^8.4.31",
-		"prettier": "^3.0.3",
-		"prettier-plugin-svelte": "^3.0.3",
-		"prettier-plugin-tailwindcss": "^0.5.6",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"crypto-js": "^4.2.0",
-		"idb": "^7.1.1",
-		"rxjs": "^7.8.1"
-	}
+  "name": "tofu",
+  "version": "0.0.1",
+  "private": true,
+  "scripts": {
+    "dev": "vite dev",
+    "build": "vite build",
+    "preview": "vite preview",
+    "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "lint": "prettier --check .",
+    "format": "prettier --write ."
+  },
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^2.1.1",
+    "@sveltejs/kit": "^1.30.4",
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/crypto-js": "^4.2.2",
+    "autoprefixer": "^10.4.20",
+    "daisyui": "^3.9.4",
+    "postcss": "^8.5.1",
+    "prettier": "^3.4.2",
+    "prettier-plugin-svelte": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "svelte": "^4.2.19",
+    "svelte-check": "^3.8.6",
+    "tailwindcss": "^3.4.17",
+    "tslib": "^2.8.1",
+    "typescript": "^5.7.3",
+    "vite": "^4.5.9"
+  },
+  "type": "module",
+  "dependencies": {
+    "crypto-js": "^4.2.0",
+    "idb": "^7.1.1",
+    "rxjs": "^7.8.1"
+  },
+  "trustedDependencies": [
+    "svelte-preprocess"
+  ]
 }
