--- a/package.json
+++ b/package.json
@@ -8,16 +8,19 @@
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --check .",
+		"lint": "prettier --check . && eslint src/**",
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		"@eslint/js": "^9.19.0",
 		"@sveltejs/adapter-auto": "^2.1.1",
 		"@sveltejs/kit": "^1.30.4",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/crypto-js": "^4.2.2",
 		"autoprefixer": "^10.4.20",
 		"daisyui": "^3.9.4",
+		"eslint": "^9.19.0",
+		"globals": "^15.14.0",
 		"postcss": "^8.5.1",
 		"prettier": "^3.4.2",
 		"prettier-plugin-svelte": "^3.3.3",
@@ -27,6 +30,7 @@
 		"tailwindcss": "^3.4.17",
 		"tslib": "^2.8.1",
 		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.23.0",
 		"vite": "^4.5.9"
 	},
 	"type": "module",
@@ -34,8 +38,5 @@
 		"crypto-js": "^4.2.0",
 		"idb": "^7.1.1",
 		"rxjs": "^7.8.1"
-	},
-	"trustedDependencies": [
-		"svelte-preprocess"
-	]
+	}
 }
